--- a/TryHackMe/Lianyu/Lianyu.html
+++ b/TryHackMe/Lianyu/Lianyu.html
@@ -68,11 +68,98 @@ curl http://lianyu.thm:8080
 
 <p><img src="./images/5.png" alt="alt text" /></p>
 
-<p>There were nothing interesting on <code>Page Source</code> ,so let me move on <code>automated reconnaissance</code>. After a couple of <code>wordlist</code> attempts I used <code>directory-list-medium-2.3-medium.txt</code> then it gave me just one endpoint on our web application.</p>
+<p>There were nothing interesting on <code>Page Source</code> ,so let me move on <code>automated reconnaissance</code>. After I used <code>common.txt</code> located on <code>dirb</code> directory I decided to use <code>directory-list-medium-2.3-medium.txt</code> then it gave me just one endpoint on our web application.</p>
 
 <p><code>
 dirsearch -u http://lianyu.thm -w/usr/share/wordlists/SecLists/Discovery/Web-Content/directory-list-2.3-medium. txt
 </code></p>
 
-<p><img src="./images/6.png" alt="alt text" /></p>
+<p><img src="./images/6.png" alt="alt text" />
+I also applied extended fuzzing especially on <code>island</code> endpoint ,so applying <code>directory-list-2.3-medium.txt</code> was suitable. I highly recommend you to select <code>dirsearch</code> when you need fast fuzzing sessions. </p>
+
+<p>Since I was in <code>Bilkent Network</code>, it did not allow me to use all payloads in <code>directory-list-2.3-medium.txt</code>. As you can see below, tool seems to be bugged.</p>
+
+<p><img src="./images/7.png" alt="alt text" /></p>
+
+<p>I switched on <code>2100</code> endpoint direction. This is what HTML rendered:</p>
+
+<p><img src="./images/8.png" alt="alt text" /></p>
+
+<p><code>HTML</code> source file indicates such an extension <code>.ticket</code>. I should find a way to fuzz both <code>2100</code> endpoint and specific extension called <code>.ticket</code>. Checking <code>-h</code> parameter or <code>man</code> is a great method to get parameters with specific purpose.</p>
+
+<p><code>-h</code> parameter was complicated to find necessary information about <code>extension</code> utility. That's why, I directly opened <code>manual pages</code> and found extension specific parameter.</p>
+
+<p><img src="./images/10.png" alt="alt text" /></p>
+
+<p>By using <code>-e</code> parameter we can achieve <code>.ticket</code> extension files.</p>
+
+<p><img src="./images/9.png" alt="alt text" /></p>
+
+<p><code>Dirsearch</code> did not find anything ,so I shifted through B plan, <code>gobuster</code>. You must be patient to get results on <code>fuzzing</code> phases.</p>
+
+<h3>Dirsearch Result:</h3>
+
+<p><img src="./images/12.png" alt="alt text" /></p>
+
+<h3>Gobuster Result:</h3>
+
+<p><img src="./images/11.png" alt="alt text" /></p>
+
+<p>I found an interesting string <code>RTy8yhBQdscX</code> appears to be <code>encoding</code> format.</p>
+
+<p><img src="./images/13.png" alt="alt text" /></p>
+
+<p><a href="https://gchq.github.io/CyberChef/">Cyberchef</a> could help me to decode it ,but it did not find.</p>
+
+<p><a href="https://www.dcode.fr/cipher-identifier">dcode</a> detected many options for decoding resulting from <code>PlayFair Cipher</code> to <code>Substitution Cipher</code>.</p>
+
+<p><img src="./images/14.png" alt="alt text" /></p>
+
+<p>After I applied all of them, <code>Base 58</code> was the most meaningful result compared to others.</p>
+
+<p><code>
+!#th3h00d
+</code></p>
+
+<p>```
+Ohhh Noo, Don't Talk...............</p>
+
+<p>I wasn't Expecting You at this Moment. I will meet you there</p>
+
+<p>You should find a way to Lian_Yu as we are planed. The Code Word is:
+vigilante
+```</p>
+
+<p>Maybe, the <code>vigilante</code> or <code>!#th3h00d</code> is the user:pass combination. Vigilante was more likely a username ,so I initially tried it on <code>FTP server</code>.</p>
+
+<p>GOTCHA ! ! !
+<img src="./images/15.png" alt="alt text" /></p>
+
+<p>After I logged in successfully, interacting with <code>FTP</code> was crucial for file download process.</p>
+
+<p>To list <code>directories</code>, <code>files</code>:</p>
+
+<p>```
+ls -al</p>
+
+<p>dir
+```</p>
+
+<p>To download files from <code>FTP</code> client:</p>
+
+<p><code>
+GET [File_Name]
+</code></p>
+
+<p>Unless you understand, check it below:</p>
+
+<p><img src="./images/16.png" alt="alt text" /></p>
+
+<h3>Do not forget that FTP client will drop your files from which directory that you run.</h3>
+
+<p>Since my files are located on <code>/usr/share/wordlists/SecLists/Discovery/Web-Content</code>, I want to move them to my <code>Desktop</code> directory.</p>
+
+<p><code>
+mv Leave_me_alone.png aa.jpg Queen\'s_Gambit.png ../../../../../../home/kali/Desktop
+</code></p>
 </body></html>
