--- a/TryHackMe/Fowsniff/fowsniff.html
+++ b/TryHackMe/Fowsniff/fowsniff.html
@@ -54,9 +54,25 @@
 <p><a href="https://x.com/fowsniffcorp?lang=en">Twitter</a>
 <a href="https://github.com/berzerk0/Fowsniff/blob/main/fowsniff.txt">GitHub</a></p>
 
-<p>On <code>GitHub</code> I retrieved a couple of <code>mail accounts</code> regarding to our machine. Let me also conduct port scan via <code>network mapper</code>.</p>
+<p>On <code>GitHub</code> I retrieved a couple of <code>mail accounts</code> regarding to our machine. </p>
 
-<p>I did not create advanced payload for <code>port scanning</code> since I knew that I was dealing with CTF machine. That's why, service, <code>default script</code> and <code>full port scan</code>(because I could not reach any endpoints) options are enough to handle the machine.</p>
+<p><code>
+mauer@fowsniff:8a28a94a588a95b80163709ab4313aa4
+mustikka@fowsniff:ae1644dac5b77c0cf51e0d26ad6d7e56
+tegel@fowsniff:1dc352435fecca338acfd4be10984009
+baksteen@fowsniff:19f5af754c31f1e2651edde9250d69bb
+seina@fowsniff:90dc16d47114aa13671c697fd506cf26
+stone@fowsniff:a92b8a29ef1183192e3d35187e0cfabd
+mursten@fowsniff:0e9588cb62f4b6f27e33d449e2ba0b3b
+parede@fowsniff:4d6e42f56e127803285a0a7649b5ab11
+sciana@fowsniff:f7fd98d380735e859f8b2ffbbede5a7e
+</code></p>
+
+<p><a href="https://crackstation.net/">CrackStation</a> helped me to decrypt messages directly. However, you can also use <a href="https://www.dcode.fr/cipher-identifier">dcrypt</a> to identify and decrypt it.</p>
+
+<p>Let me also conduct port scan via <code>network mapper</code>.</p>
+
+<p>I did not create advanced payload for <code>port scanning</code> since I knew that I was dealing with CTF machine. That's why, service, <code>default script</code> and <code>full port scan</code>(because I could not reach any endpoints on fuzzing) options are enough to handle the machine.</p>
 
 <p>Payload:</p>
 
@@ -66,5 +82,122 @@ sudo nmap -sV -sC -p- fowsniff.thm
 
 <p><img src="./images/3.png" alt="alt text" /></p>
 
-<p>As far as I know from computer networks course, <code>IMAP</code> stores emails through storage ,but <code>pop3</code> firstly downloads emails temporarily then make readable for client.</p>
+<p>It is clear that I gathered <code>mail</code> account's <code>user:pass</code> combination. Let's try to use them on <code>IMAP</code> and <code>POP3</code>. There were a lot of accounts some of them included <code>MD5</code> hashes, decrypted correctly ,but others did not result in properly. Therefore, <code>bruteforcing</code> should be suitable on that stuff. Furthermore, the creator of machine suggests that using <code>metasploit's pop3_login</code> module is recommended way.</p>
+
+<p>You should use <code>auxiliary/scanner/pop3/pop3_login</code> to brute-force accounts respectively. Let's look how <code>module</code> works:</p>
+
+<p>first of all, run this command to access module:</p>
+
+<p><code>
+use auxiliary/scanner/pop3/pop3_login
+</code></p>
+
+<p>Then configure your module:
+<code>
+show options
+set RPORT (use current one 110)
+set RHOSTS #target IP address
+</code></p>
+
+<p><code>pop3_login</code> requires attackers to give paths for both <code>username</code> and <code>password</code> files ,so I created separated files named <code>user.txt</code> and <code>pass.txt</code> with the combination of <code>username@domain</code> and <code>password</code> respectively.</p>
+
+<p><img src="./images/8.png" alt="alt text" /></p>
+
+<p>In my first try, I could not find correct match because of the format of the <code>user</code>. Normally, we should directly give the username with correlated <code>username@domain</code> combination ,but on this machine it did not allow me to authenticate via <code>username@domain</code> combination.</p>
+
+<p><img src="./images/7.png" alt="alt text" /></p>
+
+<p><a href="https://unix.stackexchange.com/questions/201818/checking-pop-mail-account-using-terminal">Normal authentication process</a></p>
+
+<p><code>man</code> page of the <code>telnet</code> protocol did not give useful results about it:</p>
+
+<p><img src="./images/9.png" alt="alt text" /></p>
+
+<p>I thought that I can also look the module's source code to understand the format of the <code>username</code> and <code>password</code> files.</p>
+
+<p><img src="./images/10.png" alt="alt text" /></p>
+
+<p>I just opened open only the <code>username</code> file:
+<img src="./images/11.png" alt="alt text" /></p>
+
+<p>I recognized that module directly combines <code>user:pass</code> not the <code>@domain</code> part.
+That's why, I altered the <code>user</code> and <code>pass</code> files.</p>
+
+<p><img src="./images/6.png" alt="alt text" /></p>
+
+<p>Fire ! ! !
+<img src="./images/12.png" alt="alt text" /></p>
+
+<p>Gotcha ! 
+After a long time, I finally compromised valid credentials. Let's move on how to communicate with <code>POP3</code>.</p>
+
+<p>As far as I remember from computer networks course, <code>IMAP</code> stores emails through <code>persistent storage</code> ,but <code>pop3</code> firstly downloads emails temporarily then make readable for <code>client</code>. On this instance, I only discovered that how to communicate with <code>telnet</code> protocol part in order to communicate with <code>mail</code>server. Since there was not any strategical protocol except the <code>http</code>, I directly began how can I interact with <code>IMAP</code> or <code>POP3</code>. 
+Today, I will only show you the way we deal with <code>pop3</code> to be able to retrieve emails. You can reach out from below:</p>
+
+<p><a href="[http://kb.ictbanking.net/article.php?id=488](http://kb.ictbanking.net/article.php?id=488)">POP3 usage guideline</a></p>
+
+<p>Both protocols can be suitable for <code>telnet</code> as a client program. Now let me use such command:</p>
+
+<p><code>
+[protocol name], [IPv4], [port number]
+telnet 10.10.50.41 110
+</code></p>
+
+<p><code>Telnet</code> is an outdated protocol because of the <code>insufficient message encryption</code> used for multiple operations on remote host until <code>SSH</code> released.</p>
+
+<p><img src="./images/4.png" alt="alt text" /></p>
+
+<p>As you can see above, I already connected remote host, <code>POP3 server</code>. After initial connection, It asked me to give credentials before I execute commands.
+That's why, run these commands respectively:</p>
+
+<p><code>
+USER [username]
+PASS [password]
+LIST # list the current messages
+</code></p>
+
+<p><img src="./images/5.png" alt="alt text" /></p>
+
+<p><code>Seina</code> user has currently two messages.
+To read content of the messages, we should retrieve messages:</p>
+
+<p><img src="./images/13.png" alt="alt text" /></p>
+
+<p>I would not give all the message content. Instead, I wanted to show the most crucial highlights of it.</p>
+
+<h3>Message 1 Output:</h3>
+
+<p><strong>The temporary password for SSH is "S1ck3nBluff+secureshell"</strong></p>
+
+<h3>Message 2 Output</h3>
+
+<p>baksteen, the sender</p>
+
+<p>To authenticate <code>ssh</code>, use below command:</p>
+
+<p><code>
+ssh seina@[ipv4 address]
+ssh stone@[ipv4 address]
+ssh baksteen@[ipv4 address]
+</code></p>
+
+<p>I straightforwardly tried all of them then I got shell from <code>baksteen</code> user.</p>
+
+<p><img src="./images/14.png" alt="alt text" /></p>
+
+<p>Firstly, before I upload <code>linpeas</code>. Let's apply manual approaches:</p>
+
+<h3>1) sudo -l</h3>
+
+<p>Understanding which commands <code>user</code> can run is significant for initial enumeration to escalate privileges.</p>
+
+<h3>2) Basic Directory Enumeration</h3>
+
+<p>Finding were important especially for this machine because every words have a lot of meaning in entire CTF session.</p>
+
+<h3>3) Binary Discovery</h3>
+
+<p>As you know, <code>GFTObins</code> is a crucial element in most of the <code>Li</code></p>
+
+<p><img src="./images/Screen Shot 2024-10-15 at 17.23.10.png" alt="alt text" /></p>
 </body></html>
