--- a/TryHackMe/Fowsniff/fowsniff.html
+++ b/TryHackMe/Fowsniff/fowsniff.html
@@ -167,13 +167,14 @@ To read content of the messages, we should retrieve messages:</p>
 
 <h3>Message 1 Output:</h3>
 
-<p><strong>The temporary password for SSH is "S1ck3nBluff+secureshell"</strong></p>
+<p><img src="./images/18.png" alt="alt text" /></p>
 
 <h3>Message 2 Output</h3>
 
-<p>baksteen, the sender</p>
+<p><img src="./images/19.png" alt="alt text" /></p>
 
-<p>To authenticate <code>ssh</code>, use below command:</p>
+<p>It would be beneficial to try every mail user especially on <code>SSH</code> authentication.
+To authenticate <code>ssh</code>, use below command:</p>
 
 <p><code>
 ssh seina@[ipv4 address]
@@ -197,7 +198,72 @@ ssh baksteen@[ipv4 address]
 
 <h3>3) Binary Discovery</h3>
 
-<p>As you know, <code>GFTObins</code> is a crucial element in most of the <code>Li</code></p>
+<p>As you know, <code>GFTObins</code> is really essential part in most of the <code>Capture The Flag machines</code> phases ,so I also did not forget to check useful binaries like python in this scenario.</p>
 
-<p><img src="./images/Screen Shot 2024-10-15 at 17.23.10.png" alt="alt text" /></p>
+<p><img src="./images/15.png" alt="alt text" /></p>
+
+<h3>4) OS Discovery &amp; Permission Check</h3>
+
+<p>As you can see below, I used a <code>privilege escalation</code> <code>GFTObin</code> payload:</p>
+
+<p><code>
+sudo python -c 'import os; os.system("/bin/sh")'
+</code></p>
+
+<p>If a user allowed to run run as superuser by <code>sudo</code>, it does not drop the elevated privileges. Instead, it will escalate privileges ,but it did not work. Even if I changed version of the python, it gave me the same result.</p>
+
+<p><img src="./images/16.png" alt="alt text" /></p>
+
+<p>Retrieving essential system information is sometimes useful for <code>custom binary</code> exploitation. Besides, reaching the hierarchy of the user is also important aspect in <code>OS enumeration</code>.</p>
+
+<p>Further <code>binary check</code> can be seen below.</p>
+
+<p><img src="./images/17.png" alt="alt text" />
+I intentionally searched for specific <code>binaries</code> to download <code>linpeas</code> from local since I was not able to find any evidence to escalate my privileges.</p>
+
+<p>I deployed  <code>python web server</code> via my local host then downloaded from <code>target</code>.</p>
+
+<p><img src="./images/20.png" alt="alt text" /></p>
+
+<p><code>GET</code> request and <code>my local path</code> indicating something downloaded from my local host. After I executed linpeas by giving executable permission through <code>chmod +x</code>,   I observed many evidences about machine ,yet I just only gave you the most important ones.</p>
+
+<p><img src="./images/21.png" alt="alt text" />
+We can execute, write or read everything we want on our home directory. However, we do not need such thing in this scenario.</p>
+
+<p>A file called <code>cube.sh</code> is so clear to try many escalation vectors.</p>
+
+<p><img src="./images/22.png" alt="alt text" /></p>
+
+<p>The creator of the machine embedded a <code>misconfigured code part</code> on:
+<code>/etc/update-motd.d</code>. It can be observable on <code>linpeas</code> output. Furthermore, at the end of the configuration script, there was a script mistakenly running automatically.</p>
+
+<p><code>
+sh /opt/cube/cube.sh
+</code></p>
+
+<p>Hence, I understood that If I place a <code>reverse shell</code> on <code>cube.sh</code>. System will automatically forward my <code>reverse shell</code> to my local. To make it accomplishable, deploying <code>netcat</code> listener then logout and login the <code>SSH</code> client is most probably suitable in this condition.</p>
+
+<p>I thought that if I somehow execute something on <code>cube.sh</code> as <code>users group</code>, I can fully escalate my privilege through <code>update-motd.d</code> system file. To do this we can drop <code>reverse shell</code> on <code>cube.sh</code>. Let me try it:</p>
+
+<p><img src="./images/23.png" alt="alt text" /></p>
+
+<p>At first, I forgot to add <code>#!/bin/bash</code> ,so it did not work because it is necessary to work with any <code>bash script</code> . It is like a <code>include &lt;stdio.h&gt;</code> in C programming ,so If it is not exist your script will not be executed.</p>
+
+<h3><em>Wrong Way</em></h3>
+
+<p><img src="./images/24.png" alt="alt text" /></p>
+
+<h3>Corrected !</h3>
+
+<p><img src="./images/25.png" alt="alt text" /></p>
+
+<p>Once you done your payload, you just need to run once then please logout on your ssh session then login.</p>
+
+<p><img src="./images/26.png" alt="alt text" /></p>
+
+<p>We are done ! ! !</p>
+
+<p>May The Pentest Be With You ! ! !</p>
+
+<p><img src="./images/PHOTO-2024-10-13-17-24-35.jpg" alt="alt text" /></p>
 </body></html>
