--- a/TryHackMe/Brooklyn99/Brooklyn99.html
+++ b/TryHackMe/Brooklyn99/Brooklyn99.html
@@ -169,7 +169,7 @@ stegcracker &lt;file&gt; [&lt;wordlist&gt;]
 
 <h2>Exploitation</h2>
 
-<p><strong>==Binary exploitation==</strong> can help in this scenario:</p>
+<p><strong>Binary exploitation</strong> can help in this scenario:</p>
 
 <p><a href="https://gtfobins.github.io/gtfobins/nano/">GTFOBins</a> suggest that if binary is allowed to run as superuser by <code>sudo</code>, it does not drop the elevated privileges which means we cannot constantly escalate our privileges to root.</p>
 
